# Frag

./: '  Frag.cabal  Purity.cabal  README.md  build  flatFragmentShader  flatVertexShader  fragmentShader  lineFShader  lineVShader  log  physicsDesign  run  stack.yaml  vertexShader
app/: Main.hs
client/: Main.hs
client/Purity/Client/: Data.hs  DefaultMode.hs  Demo.hs  Game.hs  Lobby.hs  Menu.hs  Network.hs  Parse.hs  Render.hs  Util.hs
server/: FragCommands.hs  FragControl.hs  FragData.hs  FragNetwork.hs  FragPhysics.hs  FragUtil.hs  Main.hs  PurityCommands.hs  PurityControl.hs  PurityData.hs  PurityNetwork.hs  PurityPhysics.hs  PurityUtil.hs  testlevel.wpl
server/Purity/: Commands.hs  Control.hs  Data.hs  Network.hs  Parse.hs  Physics.hs  Util.hs  World.hs
server/Purity/Server/: Commands.hs  Control.hs  Data.hs  Network.hs  Parse.hs  Physics.hs  Util.hs  World.hs
src/: Purity.hs
src/Purity/: Data.hs  NormalFlightPhysics.hs  ParseOBJ.hs  Physics.hs  PhysicsOld.hs  Render.hs
web/: index.html  script.js
