name:                Purity
version:             0.1.0.0
synopsis:            Experimental game in Haskell
description:         Experimental game in Haskell
homepage:            https://github.com/Lazersmoke/Purity
license:             BSD3
license-file:        LICENSE
author:              Sam Quinn
maintainer:          lazersmoke@gmail.com
copyright:           2017 Sam Quinn
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library 
  hs-source-dirs:      src
  exposed-modules:     Purity, Purity.Physics, Purity.Render, Purity.Data
  build-depends:       base >= 4.7 && < 5, OpenGLRaw, GLFW-b, linear, attoparsec, wavefront, vector, stm, lens, mtl, JuicyPixels, containers, intervals
  default-language:    Haskell2010

executable purity-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -fprof-auto
  build-depends:       base >= 4.7 && < 5, Purity
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lazersmoke/Purity
